<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50sp"
        android:text="@string/_0"
        android:textDirection="rtl"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/teclado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/teclado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_clear"
            app:layout_constraintBottom_toTopOf="@id/button_7"
            app:layout_constraintEnd_toStartOf="@id/button_del"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_del"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_del"
            app:layout_constraintBottom_toTopOf="@id/button_8"
            app:layout_constraintEnd_toStartOf="@id/button_percentage"
            app:layout_constraintStart_toEndOf="@+id/button_clear" />

        <Button
            android:id="@+id/button_percentage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_percentage"
            app:layout_constraintBottom_toTopOf="@id/button_9"
            app:layout_constraintEnd_toStartOf="@id/button_div"
            app:layout_constraintStart_toEndOf="@+id/button_del" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_div"
            app:layout_constraintBottom_toTopOf="@id/button_mult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_percentage" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_7"
            app:layout_constraintBottom_toTopOf="@id/button_4"
            app:layout_constraintEnd_toStartOf="@id/button_8"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_8"
            app:layout_constraintBottom_toTopOf="@id/button_5"
            app:layout_constraintEnd_toStartOf="@id/button_9"
            app:layout_constraintStart_toEndOf="@+id/button_7" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_9"
            app:layout_constraintBottom_toTopOf="@id/button_6"
            app:layout_constraintEnd_toStartOf="@id/button_mult"
            app:layout_constraintStart_toEndOf="@+id/button_8" />

        <Button
            android:id="@+id/button_mult"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_mult"
            app:layout_constraintBottom_toTopOf="@id/button_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_9" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@id/button_1"
            app:layout_constraintEnd_toStartOf="@id/button_5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_5"
            app:layout_constraintBottom_toTopOf="@id/button_2"
            app:layout_constraintEnd_toStartOf="@id/button_6"
            app:layout_constraintStart_toEndOf="@+id/button_4" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_6"
            app:layout_constraintBottom_toTopOf="@id/button_3"
            app:layout_constraintEnd_toStartOf="@id/button_minus"
            app:layout_constraintStart_toEndOf="@+id/button_5" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_minus"
            app:layout_constraintBottom_toTopOf="@id/button_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_6" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_1"
            app:layout_constraintBottom_toTopOf="@id/button_0"
            app:layout_constraintEnd_toStartOf="@id/button_2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_2"
            app:layout_constraintBottom_toTopOf="@id/button_dot"
            app:layout_constraintEnd_toStartOf="@id/button_3"
            app:layout_constraintStart_toEndOf="@+id/button_1" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_3"
            app:layout_constraintBottom_toTopOf="@id/button_equals"
            app:layout_constraintEnd_toStartOf="@id/button_plus"
            app:layout_constraintStart_toEndOf="@+id/button_2" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_plus"
            app:layout_constraintBottom_toTopOf="@id/button_none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_3" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_dot"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_equals"
            app:layout_constraintStart_toEndOf="@+id/button_0" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:text="@string/_equals"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_none"
            app:layout_constraintStart_toEndOf="@+id/button_dot" />

        <View
            android:id="@+id/button_none"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_equals" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>